--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,7 @@
 # Required
 export DATABASE_URL=postgres://postgres:c38e22714aa51b97c15c882ccaf23789@localhost:5433/postgres
 # Optional
+export TEST_NATIONAL_IDS=
 export TURBO_TEAM=vanir
 export TURBO_TOKEN= # Get from Vercel UI
 export LOG_LEVEL=debug
