--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,6 @@
 # Required
 export DATABASE_URL=postgres://postgres:c38e22714aa51b97c15c882ccaf23789@localhost:5433/postgres
+export AUTH_TOKEN_SECRET=megaSecretStuff
 # Optional
 export TEST_NATIONAL_IDS=
 export TURBO_TEAM=vanir
